# org.rwtodd.crypto.spritz

./: .gitignore  LICENSE.txt  Makefile.am  NEWS  README.md  build.gradle.kts  configure.ac  settings.gradle.kts  spritz-crypt.1  spritz.1  spritz.1.in  spritz.scala  spritz_crypt.scala  spritz_hash.scala
MSVC_decrypter/: SpritzDecrypt.cpp  SpritzDecrypt.sln  SpritzDecrypt.vcxproj  SpritzDecrypt.vcxproj.filters
buildSrc/: shared.gradle.kts
c_version/: Makefile  Makefile.cygwin  Makefile.unix  README.md  crypt.c  distribute  distribute.pl  hash.c  lineio.c  lineio.h  spritz-crypt.pl  spritz-hash.1  spritz-hash.pl  spritz.c  spritz.h
c_version/test/: test.sh
cli/: build.gradle.kts
cli/src/: module-info.java
cpp_version/: README.md  hash.cpp  spritz.cpp  spritz.hpp
elisp_version/: README.md  spritz.el
forth_version/: README.md  spritz.forth
fsharp_version/: README.md  SpritzHash.fs
go_version/: README.md  spritz.go
java_version/: Manifest.txt  README.md  build_jar.sh
java_version/JEncrNotes/: build.xml  pom.xml
java_version/SpritzCLI/: build.xml  nbactions.xml  pom.xml
java_version/SpritzCipher/: build.xml  pom.xml
lib/: build.gradle.kts
lib/src/: module-info.java
lisp_version/: spritz.lisp
rwt/spritz/: Crypt.java  Hash.java
scala_version/: .gitignore  README.md  build.sbt  spritz  spritz.scala  spritz_crypt.scala
scala_version/cmd/: crypt.scala  hash.scala  passwd.scala  repass.scala  spmain.scala  spritz_crypt.scala  spritz_hash.scala
src/: b64.c  crypt.c  hash.c  main.c  spritz.c  spritz.h
test/: crypt-test.sh  hash-test.sh
(+60 files in other folders)
